--- a/observer/templates/TrackedObjectRow.html
+++ b/observer/templates/TrackedObjectRow.html
@@ -1,14 +1,10 @@
-<div class="row mb-1">
+<div class="row mb-1 border border-secondary border-2">
     <div class="col">
-        <div class="row">
-            <div class="col">
-                <h5>{objectName}</h5>
-            </div>
+        <div class="row border border-info border-1">
+            <h5>{objectName}</h5>
         </div>
         <div class="row">
-            <div class="col">
-                <p>Current Position: ({realCenter})</p>
-            </div>
+            <p>Current Position: ({realCenter})</p>
         </div>
         <div class="row">
             <div class="col">
@@ -21,7 +17,7 @@
         </div>
     </div>
     <div class="col">
-        <img class="img-fluid" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px;">
+        <img class="img-fluid border border-info border-2" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px;">
     </div>
 </div>
 <hr class="mt-2 mb-3"/>
