Fix no camera + camera auth

--- a/harmony/observer/templates/NewCamera.html
+++ b/harmony/observer/templates/NewCamera.html
@@ -24,7 +24,7 @@
             <label class="form-check-label" for="camRot">Rotation</label><br>
             <label for="camAddr">Address</label>
             <input type="text" class="form-control" name="camAddr" placeholder="http://localhost:8080/snapshot"><br>
-            <label for="camAddr">Auth</label>
+            <label for="camAuth">Auth</label>
             <input type="text" class="form-control" name="camAuth" placeholder=""><br>
             <input type="submit" class="btn btn-primary" value="Add Camera">
         </form>
