--- a/observer/templates/NewCamera.html
+++ b/observer/templates/NewCamera.html
@@ -20,7 +20,9 @@
         <form hx-post="{configuratorURL}/new_camera" hx-swap="outerHTML">
             <label for="camName">Name</label>
             <input type="text" class="form-control" name="camName" placeholder="0"><br>
-            <input type="number" class="form-check-input" name="camRot" min="0" max="360">
+            <input type="checkbox" class="form-check-input" name="rtspCam">
+            <label class="form-check-label" for="rtspCam">RTSP</label><br>
+            <input type="number" class="form-check-input" name="camRot" min="0" max="360" style="width:3em">
             <label class="form-check-label" for="camRot">Rotation</label><br>
             <label for="camAddr">Address</label>
             <input type="text" class="form-control" name="camAddr" placeholder="http://localhost:8080/snapshot"><br>
