Update ChangeRow template; fix transparency

--- a/observer/templates/TrackedObjectRow.html
+++ b/observer/templates/TrackedObjectRow.html
@@ -11,10 +11,10 @@
                 <p>Last Move Distance: {moveDistance}</p>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <button class="btn btn-primary" hx-target="#objectInteractor" hx-get="{observerURL}object_distances/{objectName}">Object Distance Table</button>
             <button class="btn btn-info" hx-target="#objectInteractor" hx-get="{observerURL}objects/{objectName}">Edit</button>
-        </div>
+        </div> -->
     </div>
     <div class="col">
         <img class="img-fluid border border-info border-2" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px;">
