--- a/observer/templates/NewCamera.html
+++ b/observer/templates/NewCamera.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container">
         <h1>New Camera</h1>
-        <form hx-post="{configuratorURL}/new_camera" hx-swap="outerHTML">
+        <form hx-post="{configuratorURL}new_camera" hx-swap="outerHTML">
             <label for="camName">Name</label>
             <input type="text" class="form-control" name="camName" placeholder="0"><br>
             <input type="checkbox" class="form-check-input" name="rtspCam">
