--- a/observer/templates/Configurator.html
+++ b/observer/templates/Configurator.html
@@ -30,7 +30,7 @@
     <div class="row" align="left">
         <div class="container border border-3 border-info" align="left">
             <h3>Grid Configuration</h3>
-            <form hx-post="{configuratorURL}/grid_configuration" hx-swap="outerHTML">
+            <form hx-post="{configuratorURL}grid_configuration" hx-swap="outerHTML">
                 <input type="number" class="form-check-input bg-info" name="size" min="10" max="60" value="{size}" style="width:4em">
                 <label class="form-check-label" for="size">Size</label><br>
                 <input type="submit" class="btn btn-primary bg-secondary" value="Submit Grid Configuration">
